--- a/package.json
+++ b/package.json
@@ -15,13 +15,15 @@
     "@sveltejs/adapter-vercel": "^6.1.2",
     "@sveltejs/kit": "^2.0.0",
     "@sveltejs/vite-plugin-svelte": "^4.0.0",
+    "@vite-pwa/sveltekit": "^1.0.1",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.32",
     "svelte": "^5.0.0",
     "svelte-check": "^4.0.0",
     "tailwindcss": "^3.4.0",
     "typescript": "^5.3.0",
-    "vite": "^5.0.0"
+    "vite": "^5.0.0",
+    "vite-plugin-pwa": "^1.1.0"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.39.0",
