--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "vite-plugin-pwa": "^1.1.0"
   },
   "dependencies": {
+    "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.39.0",
     "daisyui": "^4.5.0"
   }
